Fixed Footer, Collapsive Bar Slow Down Issue

--- a/src/app/shared/components/technopedia/footer/footer.component.scss
+++ b/src/app/shared/components/technopedia/footer/footer.component.scss
@@ -22,4 +22,5 @@
 }
 .footer .copyright h5 {
     color: $color-white;
+    text-align: center;
 }
