--- a/src/app/technopedia/home/home.component.scss
+++ b/src/app/technopedia/home/home.component.scss
@@ -40,9 +40,11 @@
 }
 .carousel .left {
   left: 0;
+  cursor: pointer;
 }
 .carousel .right {
   right: 0;
+  cursor: pointer;
 }
 .carousel .bottom {
   width: 100%;
